--- a/MyApp/src/main/resources/application.properties
+++ b/MyApp/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.database=userdata
+
 server.port=8080
+spring.data.mongodb.uri=mongodb+srv://myapp:ewwKSdgHVmlkPrud@cluster0.xcnm6.mongodb.net/users?retryWrites=true&w=majority
